# PCem-WebAssembly

./: .gitignore  CMakeLists.txt  PORTING_NOTES.md  README.md  build.sh  serve.py
core/: CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  TESTED.md
core/.github/workflows/: workflow-qt.yml  workflow.yml
core/cmake/: apple.cmake
core/experimental/printer_epsonlx810/: CMakeLists.txt  lpt_epsonlx810.c  plugin.c
core/includes/: includes.cmake
core/includes/private/: bswap.h  fdi2raw.h  filters.h  ibm.h  io.h  pgc_palettes.h  plat-dinput.h  plat-joystick.h  plat-keyboard.h  plat-midi.h  plat-mouse.h  pzx.h  resources.h  rtc.h  rtc_tc8521.h  scamp.h  thread.h  timer.h
core/includes/private/codegen/: codegen.h  codegen_allocator.h  codegen_backend.h  codegen_ops.h  codegen_ops_misc.h
core/includes/private/cpu/: x87.h
core/includes/private/dosbox/: cdrom.h  dbopl.h  nukedopl.h  vid_cga_comp.h
core/includes/private/flash/: tandy_eeprom.h
core/includes/private/hdd/: hdd_file.h
core/includes/private/models/: zenith.h
core/includes/private/qt-ui/: qt-app.h  qt-common.h  qt-config-eventbinder.h  qt-createdisc.h  qt-deviceconfig.h  qt-dialogbox.h  qt-display.h  qt-glsl.h  qt-glslp-parser.h  qt-hostconfig.h  qt-joystickconfig.h  qt-sdl2-glw.h  qt-sdl2-video-gl3.h  qt-sdl2-video-renderer.h  qt-sdl2-video.h  qt-sdl2.h  qt-shaderconfig.h  qt-status.h  qt-utils.h  ui-utils.h  viewer.h  viewer_voodoo.h
core/includes/private/sound/: sound_mmb.h
core/src/: CMakeLists.txt  fdi2raw.c  io.c  mcr.c  pc.c  ppi.c  pzx.c  rtc.c  rtc_tc8521.c  thread-pthread.c  timer.c
core/src/cdrom/: cdrom-image.cc  cdrom-ioctl-linux.c  cdrom-ioctl-osx.c  cdrom-null.c
core/src/codegen/: codegen.c  codegen_accumulate.c  codegen_allocator.c  codegen_block.c  codegen_ir.c  codegen_ops.c  codegen_ops_3dnow.c  codegen_ops_arith.c  codegen_ops_branch.c  codegen_ops_fpu_arith.c  codegen_ops_fpu_constant.c  codegen_ops_fpu_loadstore.c  codegen_ops_fpu_misc.c  codegen_ops_helpers.c  codegen_ops_jump.c  codegen_ops_logic.c  codegen_ops_misc.c  codegen_ops_mmx_arith.c  codegen_ops_mmx_cmp.c  codegen_ops_mmx_loadstore.c  codegen_ops_mmx_logic.c  codegen_ops_mmx_pack.c  codegen_ops_mmx_shift.c  codegen_ops_mov.c  codegen_ops_shift.c  codegen_ops_stack.c  codegen_reg.c  codegen_timing_486.c  codegen_timing_686.c  codegen_timing_common.c  codegen_timing_k6.c  codegen_timing_pentium.c  codegen_timing_winchip.c  codegen_timing_winchip2.c  codegen_x86-64.c
core/src/cpu/: 386_common.c  386_dynarec.c  808x.c  cpu.c  cpu_tables.c  x86seg.c  x87.c
core/src/devices/: esdi_at.c  nvr.c
core/src/disc/: disc.c  disc_fdi.c  disc_img.c  disc_sector.c
core/src/dosbox/: cdrom_image.cpp  vid_cga_comp.c
core/src/flash/: intel_flash.c  rom.c  sst39sf010.c  tandy_eeprom.c  tandy_rom.c
core/src/floppy/: fdc.c  fdc37c665.c  fdc37c93x.c  fdd.c
core/src/hdd/: hdd.c  hdd_esdi.c  hdd_file.c
core/src/ide/: ide.c  ide_atapi.c  ide_sff8038i.c
core/src/joystick/: joystick_ch_flightstick_pro.c  joystick_standard.c  joystick_sw_pad.c  joystick_tm_fcs.c
core/src/keyboard/: keyboard.c  keyboard_amstrad.c  keyboard_at.c  keyboard_olim24.c  keyboard_pcjr.c  keyboard_xt.c
core/src/memory/: mem.c  mem_bios.c
core/src/mfm/: mfm_at.c  mfm_xebec.c
core/src/models/: 82091aa.c  acc2036.c  acc2168.c  acc3221.c  acer386sx.c  ali1429.c  amstrad.c  cbm_io.c  cmd640.c  compaq.c  cs8230.c  dells200.c  dma.c  grid.c  headland.c  i430fx.c  i430hx.c  i430lx.c  i430vx.c  intel.c  jim.c  laserxt.c  model.c  mvp3.c  neat.c  nvr_tc8521.c  olivetti_m24.c  opti495.c  pc87306.c  pic.c  piix.c  pit.c  ps1.c  ps2.c  ps2_mca.c  scamp.c  scat.c  serial.c  sio.c  sl82c460.c  (+10 more)
core/src/mouse/: mouse.c  mouse_msystems.c  mouse_ps2.c  mouse_serial.c
core/src/networking/: ne2000.c  nethandler.c  networking.cmake  queue.c
core/src/plugin-api/: paths.c  plugin-api.cmake  plugin.c  qt-utils.cc  wx-utils.cc
core/src/qt-ui/: AboutDlg.ui  ConfigureDlg.ui  ConfigureSelectionDlg.ui  ConfirmRememberDlg.ui  CustomResolutionDlg.ui  HdNewDlg.ui  HdSizeDlg.ui  HostConfig.ui  ShaderManagerDlg.ui  qt-app.cc  qt-common.c  qt-config-eventbinder.cc  qt-config.c  qt-config_sel.c  qt-createdisc.cc  qt-deviceconfig.cc  qt-dialogbox.cc  qt-glslp-parser.c  qt-hostconfig.c  qt-joystickconfig.cc  qt-main.cc  qt-resources.qrc  qt-sdl2-display.cc  qt-sdl2-joystick.c  qt-sdl2-keyboard.c  qt-sdl2-mouse.c  qt-sdl2-status.c  qt-sdl2-video-gl3.c  qt-sdl2-video-renderer.c  qt-sdl2-video.c  qt-sdl2.c  qt-shader_man.c  qt-shaderconfig.cc  qt-status.cc  qt-thread.c  qt-ui.cmake  qt-utils.cc  qt.rc
core/src/scsi/: scsi.c  scsi_53c400.c  scsi_aha1540.c  scsi_cd.c  scsi_hd.c  scsi_ibm.c  scsi_zip.c
core/src/sound/: sound.c  sound.cmake  sound_ad1848.c  sound_adlib.c  sound_adlibgold.c  sound_audiopci.c  sound_azt2316a.c  sound_cms.c  sound_dbopl.cc  sound_emu8k.c  sound_gus.c  sound_mmb.c  sound_mpu401_uart.c  sound_opl.c  sound_pas16.c  sound_ps1.c  sound_pssj.c  sound_resid.cc  sound_sb.c  sound_sb_dsp.c  sound_sn76489.c  sound_speaker.c  sound_ssi2001.c  sound_wss.c  sound_ym7128.c
core/src/video/: vid_ati18800.c  vid_ati28800.c  vid_ati68860_ramdac.c  vid_ati_eeprom.c  vid_ati_mach64.c  vid_cga.c  vid_cl5429.c  vid_colorplus.c  vid_compaq_cga.c  vid_ega.c  vid_et4000.c  vid_et4000w32.c  vid_et4000w32i.c  vid_genius.c  vid_hercules.c  vid_ht216.c  vid_icd2061.c  vid_ics2595.c  vid_im1024.c  vid_incolor.c  vid_mda.c  vid_mga.c  vid_olivetti_m24.c  vid_oti037.c  vid_oti067.c  vid_paradise.c  vid_pc1512.c  vid_pc1640.c  vid_pc200.c  vid_pcjr.c  vid_pgc.c  vid_ps1_svga.c  vid_quadcolor.c  vid_s3.c  vid_s3_virge.c  vid_sdac_ramdac.c  vid_sigma.c  vid_stg_ramdac.c  vid_svga.c  vid_svga_render.c  (+14 more)
core/src/wx-ui/: pc.xrc  wx-common.c  wx-config.c  wx-config_sel.c  wx-createdisc.cc  wx-glslp-parser.c  wx-hostconfig.c  wx-joystickconfig.cc  wx-sdl2-display-win.c  wx-sdl2-display.c  wx-sdl2-joystick.c  wx-sdl2-keyboard.c  wx-sdl2-mouse.c  wx-sdl2-status.c  wx-sdl2-video-gl3.c  wx-sdl2-video-renderer.c  wx-sdl2-video.c  wx-sdl2.c  wx-shader_man.c  wx-status.cc  wx-utils.cc
(+134 files in other folders)
